# mindscroller

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: brief.py  planner.py
backend/app/content/: fal_client.py  generator.py  gradium_client.py  openai_client.py  prompts.py  schema.py  topics.py  voices.py
backend/app/db/: client.py  schema.sql
backend/app/routes/: agent.py  feed.py  preview.py  workbench.py
backend/scripts/: backfill_card_images.py  generate_category_images.py  generate_voice_avatars.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActionBar.tsx  AffinityBars.tsx  AudioControls.tsx  Card.tsx  Dashboard.tsx  Header.tsx  NextGenPreview.tsx  PartnerLogos.tsx
frontend/src/hooks/: useAudioUnlock.ts  useCardPlayback.ts  useFlipReorder.ts
frontend/src/lib/: api.ts  store.ts
frontend/src/routes/: Feed.tsx  Onboarding.tsx  Splash.tsx
frontend/src/styles/: index.css
