[project]
name = "mindscroller-backend"
version = "0.1.0"
description = "TikTok-style learning feed — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "openai>=1.55,<2",
    "fal-client>=0.5,<0.6",
    "httpx>=0.27,<0.28",
    "pydantic>=2.9,<2.11",
    "pydantic-settings>=2.6,<2.8",
    "python-dotenv>=1.0,<2",
    "aiosqlite>=0.20,<0.21",
    "python-multipart>=0.0.12,<0.0.20",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
